force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/agf__ADM_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>Used to populate the Assignment Rules on ADM_Work__c records</description>
    <label>Assignment Rule</label>
    <nameField>
        <label>Assignment Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>