force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>agf__Additional_Emails__c</fullName>
    <label>Followers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>