force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Assignee_Assignment__c.field-meta.xml
<CustomField>
    <fullName>agf__Assignee_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>