force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Inactive__c.field-meta.xml
<CustomField>
    <fullName>agf__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to designate if an assignment rule should be applied to work records.</description>
    <inlineHelpText>Used to designate if an assignment rule should be applied to work records.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>