force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is empty it will be pre-populated with the Product Owner for the rule&apos;s scrum team.</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>