force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__QA_Assignment__c.field-meta.xml
<CustomField>
    <fullName>agf__QA_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZjMAI</relationshipName>
    <type>Lookup</type>
</CustomField>