force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Record_Type__c</fullName>
    <inlineHelpText>The Work record type this assignment rule is applicable for</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>