force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Scrum_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipName>R00NT0000000lhZkMAI</relationshipName>
    <type>Lookup</type>
</CustomField>