force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__Tech_Writer_Assignment__c.field-meta.xml
<CustomField>
    <fullName>agf__Tech_Writer_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZmMAI</relationshipName>
    <type>Lookup</type>
</CustomField>