force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/fields/agf__UE_Engineer__c.field-meta.xml
<CustomField>
    <fullName>agf__UE_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UE Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>