force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/validationRules/agf__ProductOwnerReq.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ProductOwnerReq</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Product_Owner__c == null</errorConditionFormula>
    <errorDisplayField>agf__Product_Owner__c</errorDisplayField>
    <errorMessage>Product Owner is a required field</errorMessage>
</ValidationRule>