force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/validationRules/agf__ScrumTeamIsActive.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ScrumTeamIsActive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( agf__Inactive__c ), agf__Inactive__c = false, agf__Scrum_Team_Assignment__r.agf__Active__c = false)</errorConditionFormula>
    <errorDisplayField>agf__Scrum_Team_Assignment__c</errorDisplayField>
    <errorMessage>The scrum team you selected is not active.</errorMessage>
</ValidationRule>