force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Assignment_Rule__c/validationRules/agf__ScrumTeamRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ScrumTeamRequired</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Scrum_Team_Assignment__c == null</errorConditionFormula>
    <errorDisplayField>agf__Scrum_Team_Assignment__c</errorDisplayField>
    <errorMessage>Scrum Team is a required field</errorMessage>
</ValidationRule>